--- a/json/cluster_configuration.json
+++ b/json/cluster_configuration.json
@@ -15,7 +15,7 @@
 "properties_attributes": {},
 		"properties": {
 		"domains": "SPECIFYDOMAIN",
-		"manage_krb5_conf": "false"
+		"manage_krb5_conf": "true"
 		}
 	}
 }, {
