--- a/multinode-without-kerberos/json/cluster_configuration.json
+++ b/multinode-without-kerberos/json/cluster_configuration.json
@@ -24,30 +24,31 @@
 	 {
 	 "name": "hostname1",
 	 "components": [
-			{  "name": "NAMENODE"  			}, 	 			
+		 	{  "name" : "AMBARI_SERVER"     }
+			{  "name": "NAMENODE"  		}, 	 			
 			{  "name": "WEBHCAT_SERVER"  	}, 
 			{  "name": "ZOOKEEPER_SERVER"  	}, 
 			{  "name": "STORM_UI_SERVER"  	}, 
-			{  "name": "SUPERVISOR"  		},
-			{  "name": "NIMBUS"  			},
-			{  "name": "HIVE_SERVER"  		}, 
+			{  "name": "SUPERVISOR"  	},
+			{  "name": "NIMBUS"  		},
+			{  "name": "HIVE_SERVER"  	}, 
 			{  "name": "HIVE_METASTORE"  	},
 			{  "name": "METRICS_COLLECTOR" 	},  
 			{  "name": "METRICS_MONITOR"  	}, 			
-			{  "name": "PIG" 				}, 			
-			{  "name": "HCAT"  				}, 
-			{  "name": "SQOOP"  			},			
-			{  "name": "NODEMANAGER"  		},  			
-			{  "name": "DATANODE"  			},
+			{  "name": "PIG" 		}, 			
+			{  "name": "HCAT"  		}, 
+			{  "name": "SQOOP"  		},			
+			{  "name": "NODEMANAGER"  	},  			
+			{  "name": "DATANODE"  		},
 			{  "name": "HBASE_REGIONSERVER" }, 			
-			{  "name": "DRPC_SERVER"  		},
-			{  "name": "HDFS_CLIENT"  		}, 
-			{  "name": "HIVE_CLIENT"  		},  
-			{  "name": "HBASE_CLIENT"  		}, 
+			{  "name": "DRPC_SERVER"  	},
+			{  "name": "HDFS_CLIENT"  	}, 
+			{  "name": "HIVE_CLIENT"  	},  
+			{  "name": "HBASE_CLIENT"  	}, 
 			{  "name": "ZOOKEEPER_CLIENT"  	},	
-			{  "name": "YARN_CLIENT"  		}, 
+			{  "name": "YARN_CLIENT"  	}, 
 			{  "name": "MAPREDUCE2_CLIENT"  },			
-			{  "name": "TEZ_CLIENT"  		}			
+			{  "name": "TEZ_CLIENT"  	}			
 		],
 		"cardinality": "1"
 	}, 
@@ -55,24 +56,24 @@
 	 "name": "hostname2",
 	 "components": [
 			{  "name": "RESOURCEMANAGER"  	}, 	 
-			{  "name": "HISTORYSERVER"		},  
+			{  "name": "HISTORYSERVER"	},  
 			{  "name": "APP_TIMELINE_SERVER"}, 	 
 			{  "name": "ZOOKEEPER_SERVER"	}, 
 			{  "name": "SECONDARY_NAMENODE"	}, 
 			{  "name": "METRICS_MONITOR"  	}, 			
-			{  "name": "PIG" 				}, 			
-			{  "name": "HCAT"  				}, 
-			{  "name": "SQOOP"  			},			
-			{  "name": "NODEMANAGER"  		},  			
-			{  "name": "DATANODE"  			},
+			{  "name": "PIG" 		}, 			
+			{  "name": "HCAT"  		}, 
+			{  "name": "SQOOP"  		},			
+			{  "name": "NODEMANAGER"  	},  			
+			{  "name": "DATANODE"  		},
 			{  "name": "HBASE_REGIONSERVER" }, 			
-			{  "name": "HDFS_CLIENT"  		}, 
-			{  "name": "HIVE_CLIENT"  		},  
-			{  "name": "HBASE_CLIENT"  		}, 
+			{  "name": "HDFS_CLIENT"  	}, 
+			{  "name": "HIVE_CLIENT"  	},  
+			{  "name": "HBASE_CLIENT"  	}, 
 			{  "name": "ZOOKEEPER_CLIENT"  	},	
-			{  "name": "YARN_CLIENT"  		}, 
+			{  "name": "YARN_CLIENT"  	}, 
 			{  "name": "MAPREDUCE2_CLIENT"  },			
-			{  "name": "TEZ_CLIENT"  		}		
+			{  "name": "TEZ_CLIENT"  	}		
 
 		],
 		"cardinality": "1"
@@ -80,23 +81,23 @@
 	{
 	"name": "hostname3",
 	"components": [
-			{  "name": "KAFKA_BROKER"  		}, 
-			{  "name": "HBASE_MASTER"  		}, 	
+			{  "name": "KAFKA_BROKER"  	}, 
+			{  "name": "HBASE_MASTER"  	}, 	
 			{  "name": "ZOOKEEPER_SERVER"  	}, 
 			{  "name": "METRICS_MONITOR"  	}, 			
-			{  "name": "PIG" 				}, 			
-			{  "name": "HCAT"  				}, 
-			{  "name": "SQOOP"  			},			
-			{  "name": "NODEMANAGER"  		},  			
-			{  "name": "DATANODE"  			},
+			{  "name": "PIG" 		}, 			
+			{  "name": "HCAT"  		}, 
+			{  "name": "SQOOP"  		},			
+			{  "name": "NODEMANAGER"  	},  			
+			{  "name": "DATANODE"  		},
 			{  "name": "HBASE_REGIONSERVER" }, 			
-			{  "name": "HDFS_CLIENT"  		}, 
-			{  "name": "HIVE_CLIENT"  		},  
-			{  "name": "HBASE_CLIENT"  		}, 
+			{  "name": "HDFS_CLIENT"  	}, 
+			{  "name": "HIVE_CLIENT"  	},  
+			{  "name": "HBASE_CLIENT"  	}, 
 			{  "name": "ZOOKEEPER_CLIENT"  	},	
-			{  "name": "YARN_CLIENT"  		}, 
+			{  "name": "YARN_CLIENT"  	}, 
 			{  "name": "MAPREDUCE2_CLIENT"  },			
-			{  "name": "TEZ_CLIENT"  		}
+			{  "name": "TEZ_CLIENT"  	}
 		],
 		"cardinality": "1"
 	}
