--- a/multinode-without-kerberos/json/cluster_configuration.json
+++ b/multinode-without-kerberos/json/cluster_configuration.json
@@ -24,7 +24,7 @@
 	 {
 	 "name": "hostname1",
 	 "components": [
-		 	{  "name" : "AMBARI_SERVER"     }
+		 	{  "name" : "AMBARI_SERVER"     },
 			{  "name": "NAMENODE"  		}, 	 			
 			{  "name": "WEBHCAT_SERVER"  	}, 
 			{  "name": "ZOOKEEPER_SERVER"  	}, 
