updated for kerberos

--- a/multinode-with-kerberos/json/hostmapping.json
+++ b/multinode-with-kerberos/json/hostmapping.json
@@ -35,5 +35,5 @@
     "security" : {
         "type" : "KERBEROS"
    },
-   "Clusters" : {"cluster_name":"hdp25sn"}
+   "Clusters" : {"cluster_name":"hdp25mn"}
 }
