--- a/hdp-ha-with-kerberos/json/cluster_configuration.json
+++ b/hdp-ha-with-kerberos/json/cluster_configuration.json
@@ -63,10 +63,33 @@
           "dfs.namenode.shared.edits.dir" : "qjournal://%HOSTGROUP::hostname1%:8485;%HOSTGROUP::hostname2%:8485;%HOSTGROUP::hostname3%:8485/hdpha",
           "dfs.nameservices" : "hdpha"
       }}
+    },{
+      "yarn-site" : {
+        "properties" : {
+          "hadoop.registry.rm.enabled" : "false",
+          "hadoop.registry.zk.quorum" : "%HOSTGROUP::hostname3%:2181,%HOSTGROUP::hostname2%:2181,%HOSTGROUP::hostname1%:2181",
+          "yarn.log.server.url" : "http://%HOSTGROUP::hostname2%:19888/jobhistory/logs",
+          "yarn.resourcemanager.address" : "%HOSTGROUP::hostname2%:8050",
+          "yarn.resourcemanager.admin.address" : "%HOSTGROUP::hostname2%:8141",
+          "yarn.resourcemanager.cluster-id" : "yarn-cluster",
+          "yarn.resourcemanager.ha.automatic-failover.zk-base-path" : "/yarn-leader-election",
+          "yarn.resourcemanager.ha.enabled" : "true",
+          "yarn.resourcemanager.ha.rm-ids" : "rm1,rm2",
+          "yarn.resourcemanager.hostname" : "%HOSTGROUP::hostname2%",
+          "yarn.resourcemanager.recovery.enabled" : "true",
+          "yarn.resourcemanager.resource-tracker.address" : "%HOSTGROUP::hostname2%:8025",
+          "yarn.resourcemanager.scheduler.address" : "%HOSTGROUP::hostname2%:8030",
+          "yarn.resourcemanager.store.class" : "org.apache.hadoop.yarn.server.resourcemanager.recovery.ZKRMStateStore",
+          "yarn.resourcemanager.webapp.address" : "%HOSTGROUP::hostname2%:8088",
+          "yarn.timeline-service.address" : "%HOSTGROUP::hostname2%:10200",
+          "yarn.timeline-service.webapp.address" : "%HOSTGROUP::hostname2%:8188",
+          "yarn.timeline-service.webapp.https.address" : "%HOSTGROUP::hostname2%:8190"
+        }
+      }
     },
     {
       "hbase-site" : {
-        "hbase.rootdir" : "hdfs://hdpha/apps/hbase/data",
+        "hbase.rootdir" : "hdfs://hdpha/apps/hbase/data"
       }
     }
  ],
