updated for rm ha

--- a/hdp-ha-with-kerberos/json/cluster_configuration.json
+++ b/hdp-ha-with-kerberos/json/cluster_configuration.json
@@ -99,8 +99,8 @@
 	 "components": [
 		 	{  "name": "AMBARI_SERVER"      },
 			{  "name": "NAMENODE"  		}, 	 
-			{ "name": "ZKFC" },
-			{ "name": "JOURNALNODE" },
+			{ "name": "ZKFC" 		},
+			{ "name": "JOURNALNODE" 	},
 			{  "name": "WEBHCAT_SERVER"  	}, 
 			{  "name": "ZOOKEEPER_SERVER"  	}, 
 			{  "name": "HIVE_SERVER"  	}, 
@@ -132,8 +132,8 @@
 			{  "name": "APP_TIMELINE_SERVER"}, 	 
 			{  "name": "ZOOKEEPER_SERVER"	}, 
 			{  "name": "NAMENODE"  		}, 	 
-			{ "name": "ZKFC" },			
-			{ "name": "JOURNALNODE" },
+			{ "name": "ZKFC" 		},			
+			{ "name": "JOURNALNODE" 	},
 			{  "name": "METRICS_MONITOR"  	}, 			
 			{  "name": "PIG" 		}, 			
 			{  "name": "HCAT"  		}, 
@@ -159,7 +159,8 @@
 			{  "name": "HBASE_MASTER"  	}, 	
 			{  "name": "ZOOKEEPER_SERVER"  	}, 
 			{  "name": "METRICS_MONITOR"  	}, 
-			{ "name": "JOURNALNODE" },
+			{ "name": "JOURNALNODE" 	},
+			{  "name": "RESOURCEMANAGER"  	}, 			
 			{  "name": "PIG" 		}, 			
 			{  "name": "HCAT"  		}, 
 			{  "name": "SQOOP"  		},			
