--- a/singlenode-with-kerberos/json/cluster_configuration.json
+++ b/singlenode-with-kerberos/json/cluster_configuration.json
@@ -66,6 +66,7 @@
 {           "name" : "HBASE_CLIENT"		},
 {           "name" : "APP_TIMELINE_SERVER"	},
 {           "name" : "HIVE_CLIENT"          	},
+{  	    "name" :  "KAFKA_BROKER"  		}, 	
 {           "name" : "RESOURCEMANAGER"		}       
 ],
 "cardinality": 1
